--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Scroll to top plugin -->
     <link rel="stylesheet" href="./vendor/Scroll-To-Top-Button-backToTop/jquery-backToTop.min.css">
     <!-- Owl Carousel  -->
-<!--     <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.carousel.min.css"> -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
+    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.carousel.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"> -->
     <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.green.min.css">
     <!-- AOS  -->
 <!--     <link rel="stylesheet" href="./vendor/aos/aos.css"> -->
