--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
 <!-- Scroll to top js  -->
 <script src="./vendor/Scroll-To-Top-Button-backToTop/jquery-backToTop.min.js"></script>
 <!--  Owl Carousel  -->
-<!-- <script src="./vendor/owl-carousel/js/owl.carousel.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+<script src="./vendor/owl-carousel/js/owl.carousel.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script> -->
 <!-- Aos  -->
 <!-- <script src="./vendor/aos/aos.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
