--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <!-- bootstrap -->
 <!--     <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<!--     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <!-- Font-awesome -->
-    <link rel="stylesheet" href="./vendor/fontawesome-free/css/all.min.css">
-<!--     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<!--     <link rel="stylesheet" href="./vendor/fontawesome-free/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
    
     <!-- Magnific Popup image gallery -->
 <!--     <link rel="stylesheet" href="./vendor/image-popup/magnific-popup.css"> -->
@@ -22,8 +22,8 @@
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"> -->
     <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.green.min.css">
     <!-- AOS  -->
-<!--     <link rel="stylesheet" href="./vendor/aos/aos.css"> -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="./vendor/aos/aos.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"> -->
     
     <link rel="shortcut icon" href="./img/index.png" type="image/x-icon">
     <!-- Custom CSS -->
@@ -91,7 +91,7 @@
       <div class="col-lg-6 col-md-12 py-4" data-aos="fade-down">
         <img src="./img/about-us.png" alt="About US" class="about-img img-fluid">
       </div>
-      <div class="col-lg-6 col-md-12 px-5">
+      <div class="col-lg-6 col-md-12">
         <h2 class="text-uppercase mt-5">Let me <br> introduce <br>  myself</h2>
         <p class="py-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum atque nulla, incidunt totam, eveniet tempore saepe laborum eligendi, aut omnis suscipit sed accusamus quo eius! Sequi vel molestias deserunt ratione!</p>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aspernatur amet alias ab enim dolorem labore molestiae aut incidunt maiores reprehenderit nemo soluta consequatur nam eveniet, velit libero saepe sequi?</p>
@@ -113,15 +113,15 @@
   <div class="container my-5">
     <div class="row my-5">
       <div class="col-lg-7 col-md-12 brand-container" data-aos="fade-up-right">
-        <div class="brand"><img src="./img/brands/logo1.png" alt=""></div>
-        <div class="brand"><img src="./img/brands/logo2.png" alt=""></div>
-        <div class="brand"><img src="./img/brands/logo3.png" alt="" ></div>
-        <div class="brand"><img src="./img/brands/logo4.png" alt=""></div>
-        <div class="brand"><img src="./img/brands/logo5.png" alt=""></div>
-        <div class="brand"><img src="./img/brands/logo6.png" alt=""></div>
-        <div class="brand"><img src="./img/brands/logo7.png" alt=""></div>
-        <div class="brand"><img src="./img/brands/logo8.png" alt=""></div>
-        <div class="brand"><img src="./img/brands/logo9.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo1.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo2.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo3.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo4.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo5.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo6.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo7.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo8.png" alt=""></div>
+          <div class="brand"><img src="./img/brands/logo9.png" alt=""></div>
       </div>
       <div class="col-lg-5 col-md-12 action-container" data-aos="fade-down-left">
         <div class="action">
@@ -149,14 +149,15 @@
 <!-- ++++++++++++ Service section Start ++++++++++++++ -->
 
 <section id="services" class="py-5">
-  <div class="container text-center">
-    <div class="row d-block">
-      <div class="col">
+  <div class="container-fluid text-center">
+    <div class="row">
+      <div class="col-12">
         <h2 class="text-uppercase">Services we provide</h2>
-        <p class="px-5 py-3 lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni eius, distinctio blanditiis, maxime cum ipsam dolorum nam sed atque cumque delectus recusandae, illum perspiciatis ut labore impedit qui dolores accus
+        <p class="px-md-5 py-3 lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni eius, distinctio blanditiis, maxime cum ipsam dolorum nam sed atque cumque delectus recusandae, illum perspiciatis ut labore impedit qui dolores accus
       </div>
     </div>
-   <div class="row cards m-auto text-muted">
+   <div class="row cards text-muted">
+      <div class="col">
         <div class="card bg-light my-3 mx-3" data-aos="fade-up">
           <div class="card-body">
             <img src="./img/services/s1.png" alt="">
@@ -165,6 +166,8 @@
             <button class="btn btn-outline-primary btn-sm">Read More</button>
           </div>
         </div>
+      </div>
+      <div class="col">
         <div class="card bg-light my-3 mx-3" data-aos="fade-down">
           <div class="card-body">
             <img src="./img/services/s2.png" alt="">
@@ -173,6 +176,8 @@
             <button class="btn btn-outline-primary btn-sm">Read More</button>
           </div>
         </div>
+      </div>
+      <div class="col">
         <div class="card bg-light my-3 mx-3" data-aos="fade-up-right">
           <div class="card-body">
             <img src="./img/services/s3.png" alt="">
@@ -181,6 +186,8 @@
             <button class="btn btn-outline-primary btn-sm">Read More</button>
           </div>
         </div>
+      </div>
+      <div class="col">
         <div class="card bg-light my-3 mx-3" data-aos="fade-up-left"  >
           <div class="card-body">
             <img src="./img/services/s4.png" alt="">
@@ -189,6 +196,7 @@
             <button class="btn btn-outline-primary btn-sm">Read More</button>
           </div>
         </div>
+      </div>
     </div>
   </div>
 </section>
@@ -209,8 +217,8 @@
       <button type="button" class="btn" data-filter=".following">Following</button>
       <button type="button" class="btn" data-filter=".upcomming">Upcomming</button>
     </div>
-    <div class="row grid my-portfolio">
-      <div class="col-lg-4 col-md-6 col-sm-12 mix latest" data-aos="fade-up-right">
+    <div class="row grid my-portfolio"  data-aos="fade-up-right">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix latest">
         <div class="img">
           <a href="./img/portfolio/p1.jpg" class="image"><img src="./img/portfolio/p1.jpg" alt="Portfolio-1"> </a>
         </div>
@@ -219,7 +227,7 @@
           <span class="text-secondary">Latest, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix populer" data-aos="fade-up">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix populer">
         <div class="img">
           <a href="./img/portfolio/p2.jpg" class="image"><img src="./img/portfolio/p2.jpg" alt="Portfolio-2"> </a>
         </div>
@@ -228,7 +236,7 @@
           <span class="text-secondary">Populer, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix populer" data-aos="fade-up-left">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix populer">
         <div class="img">
           <a href="./img/portfolio/p3.jpg" class="image"><img src="./img/portfolio/p3.jpg" alt="Portfolio-3"> </a>
         </div>
@@ -237,7 +245,7 @@
           <span class="text-secondary">Populer, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix latest" data-aos="fade-up-left">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix latest">
         <div class="img">
           <a href="./img/portfolio/p4.jpg" class="image"><img src="./img/portfolio/p4.jpg" alt="Portfolio-4"> </a>
         </div>
@@ -246,7 +254,7 @@
           <span class="text-secondary">Populer, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix following" data-aos="fade-down-right">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix following">
         <div class="img">
           <a href="./img/portfolio/p5.jpg" class="image"><img src="./img/portfolio/p5.jpg" alt="Portfolio-5"> </a>
         </div>
@@ -255,7 +263,7 @@
           <span class="text-secondary">Populer, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix upcomming" data-aos="fade-up-right">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix upcomming">
         <div class="img">
           <a href="./img/portfolio/p9.jpg" class="image"><img src="./img/portfolio/p9.jpg" alt="Portfolio-6"> </a>
         </div>
@@ -264,7 +272,7 @@
           <span class="text-secondary">Populer, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix following" data-aos="zoom-in-up">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix following" >
         <div class="img">
           <a href="./img/portfolio/p7.jpg" class="image"><img src="./img/portfolio/p7.jpg" alt="Portfolio-7"> </a>
         </div>
@@ -273,7 +281,7 @@
           <span class="text-secondary">Populer, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix populer" data-aos="zoom-in-down">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix populer" >
         <div class="img">
           <a href="./img/portfolio/p8.jpg" class="image"><img src="./img/portfolio/p8.jpg" alt="Portfolio-8"> </a>
         </div>
@@ -282,7 +290,7 @@
           <span class="text-secondary">Populer, Portfolio</span>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 mix upcomming latest" data-aos="zoom-in-left">
+      <div class="col-lg-4 col-md-6 col-sm-12 mix upcomming latest" >
         <div class="img">
           <a href="./img/portfolio/p6.jpg" class="image"><img src="./img/portfolio/p6.jpg" alt="Portfolio-9"> </a>
         </div>
@@ -295,6 +303,7 @@
   </div>
 </section>
 <!-- ============ End Project Area ============= -->
+
 <!-- ============ Start Testimonial Area ============= -->
 
 <section id="testimonial" class="testimonial-area py-3">
@@ -307,7 +316,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="owl-carousel owl-theme py-lg-3 py-md-2 py-sm-1 text-center" data-aos="fade-up-left">
+      <div class="col owl-carousel owl-theme py-lg-3 py-md-2 py-sm-1 text-center" data-aos="fade-up-left">
           <div class="review mx-3">
             <img src="./img/testimonials/t1.jpg" class="client" alt="Testimonial-1">
             <h4 class="text-uppercase">Daniel Cross</h4>
@@ -424,18 +433,18 @@
     <!-- ======  Mendatory JS Files     ======== -->
 <!-- <script src="./js/jquery-3.5.1.slim.min.js"></script> -->
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<!-- <script src="./js/popper.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.3/umd/popper.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.3/umd/popper.min.js"></script> -->
 <!-- <script src="./js/bootstrap.min.js"></script> -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <!-- FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 <!-- Mixitup Filter JS -->
-<!-- <script src="./vendor/mixitup/mixitup.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
+<script src="./vendor/mixitup/mixitup.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script> -->
 <!-- Magnific Popup plugin -->
-<!-- <script src="./vendor/image-popup/jquery.magnific-popup.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+<script src="./vendor/image-popup/jquery.magnific-popup.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script> -->
 <!-- Scroll to top js  -->
 <script src="./vendor/Scroll-To-Top-Button-backToTop/jquery-backToTop.min.js"></script>
 <!--  Owl Carousel  -->
