--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <!-- bootstrap -->
 <!--     <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
-<!--     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Font-awesome -->
 <!--     <link rel="stylesheet" href="./vendor/fontawesome-free/css/all.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
    
     <!-- Magnific Popup image gallery -->
-<!--     <link rel="stylesheet" href="./vendor/image-popup/magnific-popup.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+    <link rel="stylesheet" href="./vendor/image-popup/magnific-popup.css">
+<!--     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"> -->
     <!-- Scroll to top plugin -->
     <link rel="stylesheet" href="./vendor/Scroll-To-Top-Button-backToTop/jquery-backToTop.min.css">
     <!-- Owl Carousel  -->
