--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="number">
             <h3>Call Now</h3>
-            <a href="tel:8801612178331">(+880) 16121783**</a>
+            <a href="tel:+8801612178331">01612178***</a>
             </div>
           </div>
         </div>
@@ -419,7 +419,7 @@
             <li class="nav-item"><a href="javascript:void(0)" class="nav-link"> <i class="fab fa-telegram"></i> </a></li>
           </ul>
         </div>
-        <p class="copy">Copyright &copy; 2020 All rights reserved by <a href="https://m.me/kazi331">KM Shariful Islam</a></p>
+        <p class="copy">Copyright &copy; 2020 All rights reserved by <a href="https://facebook.com/kazi331">KM Shariful Islam</a></p>
       </div>
     </div>
   </div>
