--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="brand"><img src="./img/brands/logo8.png" alt=""></div>
           <div class="brand"><img src="./img/brands/logo9.png" alt=""></div>
       </div>
-      <div class="col-lg-5 col-md-12 action-container" data-aos="fade-down-left">
+      <div class="col-lg-5 col-md-12 action-container">
         <div class="action">
           <div class="experience">
             <span>10</span> <h3>Years <br> Experience <br> Working</h3>
