--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"> -->
     <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.green.min.css">
     <!-- AOS  -->
-    <link rel="stylesheet" href="./vendor/aos/aos.css">
+  <!--  <link rel="stylesheet" href="./vendor/aos/aos.css"> -->
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"> -->
     
     <link rel="shortcut icon" href="./img/index.png" type="image/x-icon">
@@ -452,7 +452,7 @@
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script> -->
 <!-- Aos  -->
 <!-- <script src="./vendor/aos/aos.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script> -->
 <!-- Custom Jquery -->
 <script src="./js/main.js"></script>
 
